# pd-chips

./: .gitignore  Makefile.pdlibbuilder  README.md  atari5200~-help.pd  colecovision~-help.pd  colecovision~.c
_archive/examples/: BachBWV1001Presto_in4objects.pd  hardoff-12objects-blips.pd  hardoff-12objects-shepard.pd  miulew_10objects_bass-sequence.pd  mnbVSvetsVSoff-iii.pd  mnbVSvetsVSoffiiiglitch.pd  ohmsnotgonez.pd  single_line_of_code_music-iv.pd  single_line_of_code_music-v1.pd  single_line_of_code_music1.pd  trance-ii.pd  tranceAcidDoof.pd
_archive/src/autotuned~/: Makefile  autotuned~-help.pd  pitchshifter~.h
_archive/src/gameboy~/: sound.c
_archive/src/jit.atari2600.src/atari2600/: Atari2600.h  DefaultSettings.cxx  DefaultSettings.hxx  FrameBufferJit.cxx  FrameBufferJit.hxx  FrameBufferMySDL.cxx  FrameBufferMySDL.hxx  JitterEntry.cxx  JitterEntry.hxx  JitterStruct.h  jit.atari2600.c  max.jit.atari2600.c  max.jit.atari2600.def  max.jit.atari2600.vcproj  max.jit.ncb  max.jit.sln
_archive/src/make/: findreplace.pd  findreplace.py  import_py.pd  make.pyo
_archive/src/make/oneline~/: m_pd.h  onelixt~.h
_archive/src/nesnoise~/: nesapu2.h
_archive/src/nessquare~/: Makefile  nes_apu2.h  nessquare~.c
_archive/src/ratts~/: holmes-help.pd  number2text-help.pd  rattstok-help.pd
_archive/src/ratts~/src/: Makefile.am  README.txt  config.status  configure.in
_archive/src/ratts~/src/dict/: Makefile.am  mkdicttxt.c
_archive/src/ratts~/src/dict/.deps/: mkdicttxt.Po  phones.Po
_archive/src/ratts~/src/src/: config.h  darray.c  holmes-feat.c  holmes-mask.c  holmes.c  klatt~-help.pd  make-holmes-features.perl  pd_holmes.c  phfeat.c  phoneutils.c  rholmes.h  saynum.c  saynum.h  trie.c
_archive/src/ratts~/src/src/.deps/: dsqueue.Po  holmes-mask.Po  klatt~.Po  pd_holmes.Po  ratts_keyval.Po  rattshash.Po  toupper.Po
_archive/src/tms5220~/: Makefile
_archive/src/vocoder~/: vocoder~.c
archive/examples/: 7-objects_arpeggiator.pd  hardoff-6objects.pd  mathieu_quintes.pd  merodica.pd  mnbVSvetsVSoff-iii-2_wind.pd  mnb_minifm-echo1.pd  technom.pd
archive/src/gameboy~/: Makefile
archive/src/make/oneline~/: testings~-help.pd
archive/src/make/tutorials/algorithmic-symphonies-from-one-line-of_files/: qlrs2Vorw2Y.html
archive/src/nesnoise~/: Makefile
archive/src/nessquare~/: nes_apu2.h  nessquare~.c
archive/src/nestriangle~/: nes_apu2.c
archive/src/onliner~/: oneline~.pd_darwin
archive/src/ratts~/: guessphones-help.pd  holmes-feat-help.pd  klatt-test.pd  klatt~-help.pd  rattshash-help.pd  rattshread-help.pd
archive/src/ratts~/src/dict/: Makefile  mkdicttxt
archive/src/ratts~/src/src/: Makefile.am  dsqueue.h  guessphones.c  holmes-mask-help.pd  holmes-phones.pd  number2text.c  pd_phtoelm.h  phones2holmes.c  phoneutils.h  ratts.c  squeue.c  squeue.h  text.c
archive/src/ratts~/src/src/.deps/: darray.Po  elements.Po  parwave.Po  pd_phtoelm.Po  phones2holmes.Po  rholmes.Po
archive/src/spaces~/: spaces~.pd_darwin
archive/src/vocoder~/: vocoder~-help.pd
examples/: 10objects-in-tune.pd  BachBWV1001Presto_in4objects.pd  Cage4.33.needs.environment.pd  Cage4.33.pd  OhmsNotBombs.pd  bla_bla_bla.pd  chip01.pd  générateur_de_boucan.pd  hardoff-10objects-tones.pd  hardoff-7objects-tones.pd  hardoff-7objects_miulew_remix.pd  i_love_my_neighbours.pd  marbles.pd  mathieu-4-phasors.pd  minimal-enough-yet.pd  mnb_mininoise1.pd  mnb_mininoise1a.pd  mnb_mininoise2.pd  mnb_mininoise3quak.pd  oneliner_blips.pd  short_noice_sequence.pd  short_noice_sequence_alt3.pd  single_line_of_code_music-ii.pd  single_line_of_code_music-v.pd  trance.pd  two-object-patch-ii.pd  two-object-patch.pd
src/: build.sh
src/atari2600~/: Makefile  atari2600~-help.pd  atari2600~.c  atari2600~.pd_darwin
src/atari5200~/: Makefile  atari5200~-help.pd  atari5200~.c  atari5200~.pd_darwin
src/autotuned~/: autotuned_0.1~.c  autotuned~.c  autotuned~.pd_darwin
src/colecovision~/: Makefile  colecovision~-help.pd  colecovision~.pd_darwin
src/gameboy~/: gameboy~.c  gbnoise~.c  noise.h  sound.h
src/make/: make.pd  make.py
src/make/oneline~/: .c  Makefile  oneline~-help.pd  oneline~.c
src/make/tutorials/: algorithmic-symphonies-from-one-line-of.html
src/make/tutorials/algorithmic-symphonies-from-one-line-of_files/: 2379105512-widget_css_bundle.css  4000939711-widgets.js  GtQdIYUtAHg.html  a.html  a_002.html  cbgapi.js  flattrbutton.js  load.js  navbar.html  plusone.js
src/make/tutorials/algorithmic-symphonies-from-one-line-of_files/GtQdIYUtAHg_data/: watch_as3-vflTCT1oP.swf  www-embed-refresh-vfl12mdsx.css  www-embed_core_module-vflEwN98D.js
src/nesnoise~/: nesapu2.c  nesnoise~.c
src/nessquare~/: Makefile  nes_apu2.c
src/nestriangle~/: Makefile  nes_apu2.h  nestriangle~.c
src/onliner~/: oneline~-help.pd  oneline~.c  online~-examp.pd
src/ratts~/: phones2holmes-help.pd  ratts~.pd  toupper-help.pd
src/ratts~/src/: Makefile  Makefile.in  configure
src/ratts~/src/config/: Makefile  Makefile.in
src/ratts~/src/dict/: Makefile.in  phones.c  phones.def  phones.h
src/ratts~/src/dict/.deps/: darray.Po  trie.Po
src/ratts~/src/src/: ASCII.c  ASCII.h  Elements.def  Makefile  Makefile.in  alhash.c  alhash.h  config.h.in  darray.h  elements.c  elements.h  english.c  hashsizes.def  holmes-features.pd  klatt-parfile.pd  klatt_frame.c  klatt_frame.h  klatt~.c  ksflink.pd  pars.def  parwave.c  parwave.h  pd_holmes.h  pd_phtoelm.c  phfeat.h  phtoelm.c  phtoelm.def  phtoelm.h  ratts-help.pd  ratts_keyval.c  ratts_keyval.h  rattsdict.pd  rattshash.c  rattshash.h  rattshwrite-help.pd  rattstok.c  rholmes.c  spellout-help.pd  spellout.c  suspect.c  (+5 more)
src/ratts~/src/src/.deps/: ASCII.Po  alhash.Po  english.Po  guessphones.Po  holmes-feat.Po  holmes.Po  klatt_frame.Po  number2text.Po  phfeat.Po  phoneutils.Po  phtoelm.Po  ratts.Po  rattstok.Po  saynum.Po  spellout.Po  squeue.Po  suspect.Po  text.Po  trie.Po
src/spaces~/: Makefile  spaces~.c
src/vocoder~/: Makefile  vocoder~.pd_darwin
src/wobble~/: Makefile  wobble~-help.pd  wobble~.pd
(+152 files in other folders)
